getting rid of errors