@@ -18,33 +18,37 @@ import static systems.monomer.syntaxtree.operators.Arithmetic.*;
 import static systems.monomer.syntaxtree.operators.Bitwise.*;
 import static systems.monomer.syntaxtree.operators.Lists.*;
 
-public class Operator {
+public final class Operator {
     private static Map<String, Operator> operators = new HashMap<>();
+    private static final int NONE = 0;
+    private static final int BINARY = 1, PREFIX = 2, SUFFIX = 4, CHAINED = 8;
+    private static final int CONTROL = PREFIX | CHAINED | 32;
+    private static final int PRIMARY_CONTROL = CONTROL | 64, SECONDARY_CONTROL = CONTROL | 128;
 
     /**
      * @param leftPrec  a higher number signals a higher precedence
      * @param rightPrec a higher number signals a higher precedence
      */
-    private static void putData(String symbol, int leftPrec, int rightPrec, Supplier<Node> constructor) {
-        operators.put(symbol, new Operator(leftPrec, rightPrec, constructor));
+    private static void putData(String symbol, int leftPrec, int rightPrec, int info, Supplier<Node> constructor) {
+        operators.put(symbol, new Operator(info, leftPrec, rightPrec, constructor));
     }
-    private static void putData(String symbol, int prec, Supplier<Node> constructor) {
-        operators.put(symbol, new Operator(prec, prec, constructor));
+    private static void putData(String symbol, int prec, int info, Supplier<Node> constructor) {
+        operators.put(symbol, new Operator(info, prec, prec, constructor));
     }
-    private static void putData(String symbol, int prec, Function<GenericOperatorNode, CompileValue> compile, Function<GenericOperatorNode, InterpretValue> interpret) {
-        operators.put(symbol, new Operator(prec, prec, () -> new GenericOperatorNode(symbol) {{
+    private static void putData(String symbol, int prec, int info, Function<GenericOperatorNode, CompileValue> compile, Function<GenericOperatorNode, InterpretValue> interpret) {
+        operators.put(symbol, new Operator(info, prec, prec, () -> new GenericOperatorNode(symbol) {{
             setCompile(compile);
             setInterpret(interpret);
         }}));
     }
-    private static void putData(String symbol, int leftPrec, int rightPrec, Function<GenericOperatorNode, CompileValue> compile, Function<GenericOperatorNode, InterpretValue> interpret) {
-        operators.put(symbol, new Operator(leftPrec, rightPrec, () -> new GenericOperatorNode(symbol) {{
+    private static void putData(String symbol, int leftPrec, int rightPrec, int info, Function<GenericOperatorNode, CompileValue> compile, Function<GenericOperatorNode, InterpretValue> interpret) {
+        operators.put(symbol, new Operator(info, leftPrec, rightPrec, () -> new GenericOperatorNode(symbol) {{
             setCompile(compile);
             setInterpret(interpret);
         }}));
     }
-    private static void putData(String symbol, int prec, Function<GenericOperatorNode, CompileValue> compile, BiFunction<InterpretValue, InterpretValue, InterpretValue> interpret) {
-        operators.put(symbol, new Operator(prec, prec, () -> new GenericOperatorNode(symbol) {{
+    private static void putData(String symbol, int prec, int info, Function<GenericOperatorNode, CompileValue> compile, BiFunction<InterpretValue, InterpretValue, InterpretValue> interpret) {
+        operators.put(symbol, new Operator(info, prec, prec, () -> new GenericOperatorNode(symbol) {{
             setCompile(compile);
             setInterpret((self) -> interpret.apply(self.getFirst().interpretValue(), self.getSecond().interpretValue()));
         }}));
@@ -54,39 +58,39 @@ public class Operator {
      * Arithmetic operators inhabit the precedence range 1000-1200
      */
     private static void initArithmetic() {
-        putData("+", 1050, (self) -> {
+        putData("+", 1050, BINARY, (self) -> {
             //TODO
             return null;
         }, numericalChecked(differentiatedIntFloat((a, b)->a+b, (a, b)->a+b))); //TODO positive oper
-        putData("-", 1050, (self) -> {
+        putData("-", 1050, BINARY, (self) -> {
             //TODO
             return null;
         }, numericalChecked(differentiatedIntFloat((a, b)->a-b, (a, b)->a-b))); //TODO negative oper
-        putData("*", 1055, (self) -> {
+        putData("*", 1055, BINARY, (self) -> {
             //TODO
             return null;
         }, numericalChecked(differentiatedIntFloat((a, b)->a*b, (a, b)->a*b)));
-        putData("/", 1055, (self) -> {
+        putData("/", 1055, BINARY, (self) -> {
             //TODO
             return null;
         }, numericalChecked(differentiatedIntFloat((a, b)->a/b, (a, b)->a/b)));
-        putData("%", 1055, (self) -> {
+        putData("%", 1055, BINARY, (self) -> {
             //TODO
             return null;
         }, numericalChecked(differentiatedIntFloat((a, b)->a%b, (a, b)->a%b)));
-        putData("||", 1065, (self) -> {
+        putData("||", 1065, BINARY, (self) -> {
             //TODO
             return null;
         }, numericalChecked(alwaysFloat((a, b)->a*b/(a+b))));
-        putData("**", 1075, (self) -> {
+        putData("**", 1075, BINARY, (self) -> {
             //TODO
             return null;
         }, numericalChecked(differentiatedIntFloat((a, b)->(int)StrictMath.pow(a,b), StrictMath::pow)));
-        putData("*/", 1075, (self) -> {
+        putData("*/", 1075, BINARY, (self) -> {
             //TODO
             return null;
         }, numericalChecked(differentiatedIntFloat((a, b)->(int)StrictMath.pow(a,1.0/b), (a, b)->StrictMath.pow(a,1.0/b))));
-        putData("><", 1060, (self) -> {
+        putData("><", 1060, BINARY, (self) -> {
             //TODO
             return null;
         }, (self) -> {
@@ -99,45 +103,45 @@ public class Operator {
      * Bitwise operators inhabit the precedence range 700-900
      */
     private static void initBitwise() {
-        putData("!", 860, (self)->null, oneBool((a)->!a));
-        putData("?", 860, (self)->null, isTruthy());
-        putData("&", 850, (self)->null, differentiatedIntBool((a,b)->a&b, (a, b)->a&&b));
-        putData("|", 820, (self)->null, differentiatedIntBool((a,b)->a|b, (a, b)->a||b));
-        putData("^", 820, (self)->null, differentiatedIntBool((a,b)->a^b, (a, b)->a^b));
-        putData("~&", 850, (self)->null, differentiatedIntBool((a,b)->~(a&b), (a, b)->!(a&&b)));
-        putData("~|", 820, (self)->null, differentiatedIntBool((a,b)->~(a|b), (a, b)->!(a||b)));
-        putData("~^", 820, (self)->null, differentiatedIntBool((a,b)->~(a^b), (a, b)->a==b));
+        putData("!", 860, PREFIX, (self)->null, oneBool((a)->!a));
+        putData("?", 860, PREFIX, (self)->null, isTruthy());
+        putData("&", 850, BINARY, (self)->null, differentiatedIntBool((a,b)->a&b, (a, b)->a&&b));
+        putData("|", 820, BINARY, (self)->null, differentiatedIntBool((a,b)->a|b, (a, b)->a||b));
+        putData("^", 820, BINARY, (self)->null, differentiatedIntBool((a,b)->a^b, (a, b)->a^b));
+        putData("~&", 850, BINARY, (self)->null, differentiatedIntBool((a,b)->~(a&b), (a, b)->!(a&&b)));
+        putData("~|", 820, BINARY, (self)->null, differentiatedIntBool((a,b)->~(a|b), (a, b)->!(a||b)));
+        putData("~^", 820, BINARY, (self)->null, differentiatedIntBool((a,b)->~(a^b), (a, b)->a==b));
     }
 
     /**
      * Comparison operators inhabit the precedence range 500-600
      */
     private static void initComparison() {
-        putData("==", 550, (self) -> {
+        putData("==", 550, BINARY | CHAINED, (self) -> {
             //TODO
             return null;
         }, Comparison.generalIntFloatCharString(Objects::equals));
-        putData("!=", 550, (self) -> {
+        putData("!=", 550, BINARY | CHAINED, (self) -> {
             //TODO
             return null;
         }, Comparison.generalIntFloatCharString((a,b)-> !Objects.equals(a, b)));
-        putData(">", 550, (self) -> {
+        putData(">", 550, BINARY | CHAINED, (self) -> {
             //TODO
             return null;
         }, Comparison.generalIntFloatCharString((a,b)-> a.compareTo(b)>0));
-        putData("<", 550, (self) -> {
+        putData("<", 550, BINARY | CHAINED, (self) -> {
             //TODO
             return null;
         }, Comparison.generalIntFloatCharString((a,b)-> a.compareTo(b)<0));
-        putData(">=", 550, (self) -> {
+        putData(">=", 550, BINARY | CHAINED, (self) -> {
             //TODO
             return null;
         }, Comparison.generalIntFloatCharString((a,b)-> a.compareTo(b)>=0));
-        putData("<=", 550, (self) -> {
+        putData("<=", 550, BINARY | CHAINED, (self) -> {
             //TODO
             return null;
         }, Comparison.generalIntFloatCharString((a,b)-> a.compareTo(b)<=0));
-        putData("?=", 555, (self) -> {
+        putData("?=", 555, BINARY, (self) -> {
             //TODO
             return null;
         }, (first, second) -> {
@@ -149,14 +153,14 @@ public class Operator {
      * List operators inhabit the precedence range 400-500 with 1 exception
      */
     private static void initList() {
-        putData(".", 430, (self)->null, listChecked(
+        putData(".", 430, BINARY | CHAINED, (self)->null, listChecked(
                 (lists)->
                         //TODO not just lists
                         new InterpretList(lists.stream().flatMap((list)->list.getValues().stream()).collect(Collectors.toList()))
                 ));
-        putData("...", 440, (self)->null, isTruthy());
-        putData("in", 820, (self)->null, (self)->new InterpretBool(((InterpretCollectionValue)self.getSecond().interpretValue()).getValues().contains(self.getFirst().interpretValue()))); //TODO fix and clean
-        putData("#", 1800, (self)->null, listChecked((list)->new InterpretNumberValue<>(list.get(0).getValues().size())));
+        putData("...", 440, BINARY, (self)->null, isTruthy());
+        putData("in", 820, BINARY, (self)->null, (self)->new InterpretBool(((InterpretCollectionValue)self.getSecond().interpretValue()).getValues().contains(self.getFirst().interpretValue()))); //TODO fix and clean
+        putData("#", 1800, PREFIX, (self)->null, listChecked((list)->new InterpretNumberValue<>(list.get(0).getValues().size())));
     }
 
     /**
@@ -164,24 +168,24 @@ public class Operator {
      * This range overlaps with some other operators
      */
     private static void initControl() {
-        putData("if", -20, IfNode::new);
-        putData("repeat", -20, RepeatNode::new);
-        putData("while", -20, WhileNode::new);
-        putData("for", -20, ForNode::new);
-        putData("else", -20, ElseNode::new);
-        putData("any", -20, AnyNode::new);
-        putData("all", -20, AllNode::new);
-        putData("break", -20, (self)->null, (self)->null);
-        putData("continue", -20, (self)->null, (self)->null);
+        putData("if", -20, PRIMARY_CONTROL, IfNode::new);
+        putData("repeat", -20, PRIMARY_CONTROL, RepeatNode::new);
+        putData("while", -20, PRIMARY_CONTROL, WhileNode::new);
+        putData("for", -20, PRIMARY_CONTROL, ForNode::new);
+        putData("else", -20, SECONDARY_CONTROL, ElseNode::new);
+        putData("any", -20, SECONDARY_CONTROL, AnyNode::new);
+        putData("all", -20, SECONDARY_CONTROL, AllNode::new);
+//        putData("break", -20, (self)->null, (self)->null);
+//        putData("continue", -20, (self)->null, (self)->null);
     }
 
     static {
-        putData("=", 0, AssignNode::new);
-        putData(",", 100, ()->new TupleNode(","));
-        putData(";", -1000, ()->new TupleNode(";"));
-        putData(":", 1500, 150, ConvertNode::new);
-        putData("as", 5, 5, ConvertNode::new);
-        putData("@", 5000, (self) -> {
+        putData("=", 0,  BINARY | CHAINED,AssignNode::new);
+        putData(",", 100, BINARY | CHAINED | SUFFIX, ()->new TupleNode(","));
+        putData(";", -1000, BINARY | CHAINED | SUFFIX, ()->new TupleNode(";"));
+        putData(":", 1500, 150, BINARY, ConvertNode::new);
+        putData("as", 5, 5, BINARY, ConvertNode::new);
+        putData("@", 5000, PREFIX, (self) -> {
             //TODO
             return null;
         }, (self) -> {
@@ -204,34 +208,35 @@ public class Operator {
         return operators.keySet();
     }
 
-    public static Set<String> symbolPrefixes() {
-        HashSet<String> delimiters = new HashSet<>(List.of("+", "-", "~", "#", "!", "?", ":", "@", "if", "else", "any", "all", "while", "repeat", "for"));   //TODO
-        return delimiters;
+    public static boolean isSuffix(String symbol) {
+        return (operators.get(symbol).info & SUFFIX) != NONE;
     }
-
-    public static Set<String> symbolSuffixes() {
-        HashSet<String> delimiters = new HashSet<>(List.of(";"));   //TODO
-        return delimiters;
+    public static boolean isPrefix(String symbol) {
+        return (operators.get(symbol).info & PREFIX) != NONE;
+    }
+    public static boolean isBinary(String symbol) {
+        return (operators.get(symbol).info & BINARY) != NONE;
+    }
+    public static boolean isControl(String symbol) {
+        return (operators.get(symbol).info & CONTROL) != NONE;
+    }
+    public static boolean isPrimaryControl(String symbol) {
+        return (operators.get(symbol).info & PRIMARY_CONTROL) != NONE;
+    }
+    public static boolean isSecondaryControl(String symbol) {
+        return (operators.get(symbol).info & SECONDARY_CONTROL) != NONE;
+    }
+    public static boolean isOperator(String symbol) {
+        return operators.containsKey(symbol);
+    }
+    public static boolean isBreaking(String nextToken) {
+        return isBinary(nextToken) || isPrefix(nextToken);
     }
 
     public static Set<Character> signStartDelimiters() {
         HashSet<Character> delimiters = new HashSet<>(List.of('(', '[', '{'));   //TODO
         return delimiters;
     }
-
-    public static Set<String> symbolControls() {
-        HashSet<String> controls = new HashSet<>(List.of("if", "else", "any", "all", "while", "repeat", "for"));   //TODO
-        return controls;
-    }
-    public static Set<String> symbolPrimaryControls() {
-        HashSet<String> delimiters = new HashSet<>(List.of("if", "repeat", "while", "for"));   //TODO
-        return delimiters;
-    }
-    public static Set<String> symbolSecondaryControls() {
-        HashSet<String> delimiters = new HashSet<>(List.of("else", "any", "all"));   //TODO
-        return delimiters;
-    }
-
     public static Set<Character> signEndDelimiters() {
         HashSet<Character> delimiters = new HashSet<>(List.of(')', ']', '}'));   //TODO
         return delimiters;
@@ -258,16 +263,14 @@ public class Operator {
         return chains.stream().anyMatch((g) -> g.contains(a) && g.contains(b));
     }
 
-    public static boolean isBreaking(String nextToken) {
-        return true;    //TODO
-    }
 
 
+    final int leftPrec, rightPrec;
+    final int info;
+    private final Supplier<Node> constructor;
 
-    int leftPrec, rightPrec;
-    private Supplier<Node> constructor;
-
-    private Operator(int leftPrec, int rightPrec, @NonNull Supplier<Node> constructor) {
+    private Operator(int info, int leftPrec, int rightPrec, @NonNull Supplier<Node> constructor) {
+        this.info = info;
         this.leftPrec = leftPrec;
         this.rightPrec = rightPrec;
         this.constructor = constructor;
